--- a/libs/auth/src/lib/pages/login/login.page.html
+++ b/libs/auth/src/lib/pages/login/login.page.html
@@ -18,7 +18,7 @@
           size-xl="4"
         ></ion-col>
         <ion-col size-xs="12" size-sm="10" size-md="8" size-lg="6" size-xl="4">
-          <sio-auth-login></sio-auth-login>
+          <sio-auth-login [social] = "true"></sio-auth-login>
         </ion-col>
       </ion-row>
     </ion-grid>
