--- a/libs/chat/src/lib/pages/chat/chat.page.html
+++ b/libs/chat/src/lib/pages/chat/chat.page.html
@@ -1,6 +1,9 @@
 <sio-page title="auth.PAGE_TITLE_PROFILE">
-  <sio-chat chatId="1" 
-    (sioOnInfinite)="this.load($event)" (sioOnRefresh)="this.refresh($event)"
-    (sioOnClick)="this.click($event)">
-  </sio-chat>  
+  <sio-chat
+    id="681931b100386fcbbab2"
+    (sioOnInfinite)="this.load($event)"
+    (sioOnRefresh)="this.refresh($event)"
+    (sioOnClick)="this.click($event)"
+  >
+  </sio-chat>
 </sio-page>
