refactor(chat): enhance chat component layout and message handling

--- a/libs/chat/src/lib/pages/chat/chat.page.html
+++ b/libs/chat/src/lib/pages/chat/chat.page.html
@@ -1,4 +1,4 @@
-<sio-page title="auth.PAGE_TITLE_PROFILE">
+<sio-page title="chat.PAGE_TITLE_CHAT" fullmode>
   <sio-chat
     id="681931b100386fcbbab2"
     (sioOnInfinite)="this.load($event)"
@@ -6,4 +6,17 @@
     (sioOnClick)="this.click($event)"
   >
   </sio-chat>
+  <div class="input-wrap" slot="footer">
+    <button ion-button clear icon-only item-right>
+      <ion-icon name="happy"></ion-icon>
+    </button>
+    <textarea #chat_input
+              placeholder="Text Input"
+              (keyup.enter)="this.sendMessage()"
+              (focusin)="this.onFocus()">
+    </textarea>
+    <button ion-button clear icon-only item-right (click)="this.sendMessage()">
+      <ion-icon name="ios-send" ios="ios-send" md="md-send"></ion-icon>
+    </button>
+  </div>
 </sio-page>
