refactor: enhance chat component with message divider and improve structure

--- a/libs/chat/src/lib/pages/chat/chat.page.html
+++ b/libs/chat/src/lib/pages/chat/chat.page.html
@@ -1,4 +1,4 @@
-<sio-page back="true" title="chat.PAGE_TITLE_CHAT">
+<sio-page back="true" title="chat.PAGE_TITLE_CHAT" full="true">
   <div class="chatwindow">
     <sio-chat
       id="681931b100386fcbbab2"
