--- a/libs/chat/src/lib/pages/chats/chats.page.html
+++ b/libs/chat/src/lib/pages/chats/chats.page.html
@@ -1,12 +1,10 @@
 <sio-page
   title="{{ 'PAGE_CHATS_TITLE' | translate }}">
-  <sio-datalist [store]="this.sioChatState" header="name" label="$updatedAt" thumbnail="avatar"
+  <sio-datalist lines="none" [store]="this.sioChatState" header="name" label="$updatedAt" thumbnail="avatar"
     [enableInfinite]="this.sioChatState.localTotals < this.sioChatState.remoteTotals"
     (sioOnInfinite)="this.load($event)" (sioOnRefresh)="this.refresh($event)" (sioOnClick)="this.openChat($event)"
     rightMenuId="left_items"
-    leftMenuId="right_items"
-
-    
+    leftMenuId="right_items" 
   >
   </sio-datalist>
   <ion-fab slot="footer" vertical="bottom" horizontal="end">
